--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ramsecIncorporated</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>RAMSEC INCORPORATED</title>
+
 </head>
 <body>
-    <h1>Test</h1>
+    <img src="media/ramflames.gif">
+    
     
 </body>
 </html>
