text and images for index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 </head>
 <body>
     <img src="media/ramflames.gif">
+    <p id="ramblock"> RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+        RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
+    </p>
+    <img src="media/gman.gif" alt="gmans warning">
+    <a href="https://steamcommunity.com/groups/TF2IL"><img id="heavy" src="media/heavy.jpg" alt="heavys warning"></a>
     
     
 </body>
