add js alert to index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 </head>
 <body>
+    <script>
+        alert("WELCOME");
+    </script>
     <img src="media/ramflames.gif">
     <p id="ramblock"> RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
         RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
@@ -30,8 +33,8 @@
         RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
         RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
     </p>
-    <img src="media/gman.gif" alt="gmans warning">
-    <a href="https://steamcommunity.com/groups/TF2IL"><img id="heavy" src="media/heavy.jpg" alt="heavys warning"></a>
+    <a href="https://www.youtube.com/watch?v=7iFXyLah2oQ" target="_blank"><img src="media/gman.gif" alt="gmans warning"></a> 
+    <a href="https://steamcommunity.com/groups/TF2IL" target="_blank"><img id="heavy" src="media/heavy.jpg" alt="heavys warning"></a>
     
     
 </body>
