new sites and content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
     <script>
         alert("WELCOME");
+        alert("IF YOU CANNOT HEAR THE MUSIC AFTER CLICKING OK, PLEASE ALLOW AUTOPLAY OF AUDIO AND VIDEO ON YOUR WEB BROWSER");
     </script>
+    <audio autoplay loop>
+        <source src="media/nghandbag.mp3" type="audio/mp3" />
+      </audio>
     <img src="media/ramflames.gif">
     <p id="ramblock"> RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
         RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC RAMSEC
@@ -35,6 +39,7 @@
     </p>
     <a href="https://www.youtube.com/watch?v=7iFXyLah2oQ" target="_blank"><img src="media/gman.gif" alt="gmans warning"></a> 
     <a href="https://steamcommunity.com/groups/TF2IL" target="_blank"><img id="heavy" src="media/heavy.jpg" alt="heavys warning"></a>
+    <a href="important.html" id="important">CLICK HERE</a>
     
     
 </body>
