polishing buttons and dialogue

--- a/important.html
+++ b/important.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    
+
     <title>IMPORTANT LINKS</title>
 </head>
 <body>
     <audio autoplay loop>
         <source src="media/nghandbag.mp3" type="audio/mp3" />
-      </audio>
+    </audio>
+    <button id="deeper" onclick="window.open('manyscripts.html');">VENTURE DEEPER</button>
     <ul id="importantbuttons">
-        <li><button onclick="window.open('manyscripts.html','_blank');">VENTURE DEEPER</button></li>
-        <li><button onclick="window.open('flipnote.html','_blank');">FLIPNOTE.....DSI</button></li>
-        <li><button onclick="window.open('madness.html','_blank');">MADNESS</button></li>
+        <li><button onclick="window.open('flipnote.html');">FLIPNOTE.....DSI</button></li>
+        <li><button onclick="window.open('madness.html');">MADNESS</button></li>
     </ul>
+    <img src="media/dmca.jpg" width="240" height="360">
     
 </body>
 </html>
