--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <script>
         alert("WELCOME");
-        alert("IF YOU CANNOT HEAR THE MUSIC AFTER CLICKING OK, PLEASE ALLOW AUTOPLAY OF AUDIO AND VIDEO ON YOUR WEB BROWSER");
+        alert("SOUND: ACTIVATED");
     </script>
     <audio autoplay loop>
         <source src="media/nghandbag.mp3" type="audio/mp3" />
