more content added to nyan page

--- a/ramsec.html
+++ b/ramsec.html
@@ -29,6 +29,8 @@
     </audio>
     <img id="chan" src="media/4chan.gif" alt="videogame">
     <img id="adopted" src="media/adopted.gif" alt="adpoted">
+    <img id="doom" src="media/doom.gif" alt="doom">
+    <img id="cs16" src="media/cs16.gif" alt="cs">
     <script>
         var aux = document.getElementById("world"); 
         
